Small fix to nav spacing

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,8 @@ a {
   display: none;
   position: absolute;
   top: 100%;
-  width: 100%;
+  left: 0;
+  right: 0;
   margin: 0;
   padding: 10px 0;
   list-style-type: none;
